backends/drm: don't use LUTs for scaling anything outside of the [0; 1] range

They clamp input and output values to that range, so they're not usable for that purpose.

BUG: 499103


(cherry picked from commit 62196bf736feb6814661dd8154fa1b46c48eb2db)

Co-authored-by: Xaver Hugl <xaver.hugl@gmail.com>